# speech-text-with-native

./: Cargo.toml
src/: lib.rs
