[package]
name = "speech-text-with-native"
version = "0.1.5"
edition = "2021"
authors = ["Mapotato"]
description = "一个文本转语音的rust库，支持浏览器和nodejs"
license = "MIT/Apache-2.0"
repository = "https://github.com/Mapotato-Ma/speech-text-with-native"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
tts = "0.26.3"
js-sys = "0.3.77"
web-sys = { version = "0.3.50", features = ["Window"] }
